# rs-sqrt

./: Cargo.toml  README.md
src/: lib.rs  sqrt.rs
