[package]
name = "sqrt"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["sqrt"]
description = "sqrt trait"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-sqrt.git"
homepage = "https://github.com/nathanfaucett/rs-sqrt"

[dependencies]
